# ConveyorOS-OAS

./: MANUAL.html  MANUAL.md  MANUAL_check.html  SETUP_GUIDE.md  conveyor.csv  conveyor_clean.csv  index.html  newpos.csv  package-lock.json  package.json  vite.config.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-12-09-172225-0000_init_schema/: down.sql  up.sql
src-tauri/migrations/2026-01-02-192659-0000_create_slots/: down.sql  up.sql
src-tauri/migrations/2026-01-02-200810-0000_seed_slots/: down.sql  up.sql
src-tauri/migrations/2026-01-02-203011-0000_create_app_state/: down.sql  up.sql
src-tauri/migrations/2026-01-05-011843-0000_update_app_state/: down.sql  up.sql
src-tauri/migrations/2026-01-05-012458-0000_update_app_state_v1/: down.sql  up.sql
src-tauri/migrations/2026-01-05-020441-0000_update_ticket_completion/: down.sql  up.sql
src-tauri/migrations/2026-01-08-161358-0000_ticket_status_update/: down.sql  up.sql
src-tauri/migrations/2026-02-02-120000-0000_create_sessions/: up.sql
src-tauri/migrations/2026-02-03-194333-0000_session_add_admin/: down.sql  up.sql
src-tauri/migrations/2026-02-03-194629-0000_user_add_admin/: down.sql  up.sql
src-tauri/migrations/2026-05-19-000000-0000_garment_state/: down.sql  (+1 more)
src-tauri/src/: configurator_config.rs  lib.rs  main.rs  model.rs  result.rs  schema.rs  slot_manager.rs  tauri_commands.rs
src-tauri/tests/: conveyor_output_tests.rs  customer_repo_tests.rs  garment_repo_tests.rs  mod.rs  printer_tests.rs  spot_file_tests.rs  ticket_repo_tests.rs
(+95 files in other folders)
