[package]
name = "conveyoros-oas"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "conveyoros_oas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-modbus = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
melsec_mc = "0.4.13"
rs-melsec = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["chrono", "postgres", "sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 
csv = "1"
notify = { version = "8.1.0", features = ["serde"] }
opcua = "0.12"
thiserror = "1"
open62541 = "0.10"
diesel-derive-enum = "2"
diesel_migrations = "2"
